Samll Screen responsive applied

--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,11 @@
 }
 .App h1 {
   font-family: "Inconsolata", monospace;
+}
+
+@media only screen and (max-width: 425px) {
+  .App {
+    width: 100%;
+    background-color: rgb(26, 26, 46);
+  }
 }/*# sourceMappingURL=App.css.map */
