--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -14,6 +14,7 @@
   width: 100%;
   padding-top: 5rem;
   text-align: center;
+  text-align: center;
 }
 .about__left.aligment {
   margin-left: 3rem;
@@ -55,4 +56,35 @@
 .about__icon-body {
   font-size: 4rem;
   color: rgb(33, 224, 192);
+}
+
+@media only screen and (max-width: 425px) {
+  .about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    font-size: small;
+  }
+  .about__left {
+    padding: 2rem;
+    width: 100%;
+    padding-top: 5rem;
+    text-align: center;
+    margin-right: 2.5rem;
+  }
+  .about__left.aligment {
+    margin-left: 0.7rem;
+  }
+  .about__right {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 3rem;
+    padding-left: 5em;
+  }
 }/*# sourceMappingURL=about.css.map */
