--- a/src/App.scss
+++ b/src/App.scss
@@ -6,5 +6,14 @@
     h1{
         font-family: 'Inconsolata', monospace;
     }
+    
+}
 
+@media only screen and (max-width: 425px){
+    .App{
+    
+    width: 100%;
+    background-color: rgb(26, 26, 46);
+    }
+    
 }
