--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -60,4 +60,11 @@
 .btn-container__icon-body {
   font-size: 2rem;
   color: rgb(33, 224, 192);
+}
+
+@media only screen and (max-width: 425px) {
+  .card {
+    display: flex;
+    justify-content: center;
+  }
 }/*# sourceMappingURL=card.css.map */
