--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -64,3 +64,39 @@
     }
     
 }
+@media only screen and (max-width: 425px){
+    h1{
+        font-weight: bold;
+        font-size: medium;
+       
+    }
+    .contact{
+       display:grid;
+       grid-template-columns: 1fr;
+       &__icon-container{
+        margin-top: 4rem;
+    }
+    &__right{
+        margin-top:0;
+        text-align: center;
+        padding: 2rem;
+    }
+    &__form{
+        display: flex;
+        align-items:center;
+        gap: 1rem;
+        justify-content:center;
+        flex-direction: column;
+        margin-top: 1rem;
+        margin-bottom: 2rem;
+        input,textarea{
+            width: 90%;
+            border: none;
+            border-radius: 0.5rem;
+        }
+        input{
+            height: 1.5rem;
+        }
+    }
+   }
+}
