--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -10,4 +10,14 @@
 .footer h2 {
   font-weight: bold;
   font-family: "Inconsolata", monospace;
+}
+
+@media only screen and (max-width: 425px) {
+  .footer {
+    display: flex;
+    justify-content: center;
+    padding: 0rem;
+    margin: 0rem;
+    padding-bottom: 2rem;
+  }
 }/*# sourceMappingURL=footer.css.map */
