--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -11,3 +11,13 @@
         font-family: 'Inconsolata', monospace;
     }
 }
+@media only screen and (max-width: 425px){
+    .footer{
+       display:flex;
+       justify-content: center;
+       padding: 0rem;
+       margin: 0rem;
+       padding-bottom: 2rem;
+   }
+   
+}
