--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -16,11 +16,7 @@
         font-size:large;
     }
     
-    &__left{
-        display:block;
-        margin-left: 4rem;
-    }
-
+     
     &__descriptive{
         width: 100%;
         margin-bottom: 6rem;
@@ -66,17 +62,62 @@
         margin-left: 3rem;
     }
    
-   
+    &__left{
+        display:block;
+        margin-left: 4rem;
+    }
+
     &__image,img{
         
             border-radius: 50%;
             width: 350px;
             height: auto;
             filter: grayscale(100%);
-           
-          
     }
     img:hover{
         filter: grayscale(0%);
     }
+   
+}
+@media only screen and (max-width: 425px){
+    .intro{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+
+    &__image,img{
+        margin-right: 3rem;
+        border-radius: 50%;
+        width: 250px;
+        height: auto;
+        filter: grayscale(100%);
+     }
+     &__left{
+        display:flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content:left;
+        margin-left: 2rem;
+    }
+    &__content{
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       flex-direction: column;
+       padding-right: 3rem;
+       margin-right: 7rem;
+       width: 100%;
+    }
+    &__right{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 2rem;
+    }
+    }
+    
+    
 }
