--- a/src/components/navbar/navBar.css
+++ b/src/components/navbar/navBar.css
@@ -37,4 +37,16 @@ li:hover {
   font-size: 1.2rem;
   color: rgb(33, 224, 192);
   cursor: pointer;
+}
+
+@media only screen and (max-width: 425px) {
+  .nav-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 90%;
+    height: 4rem;
+    padding-top: 1rem;
+  }
 }/*# sourceMappingURL=navBar.css.map */
