--- a/src/components/navbar/navBar.scss
+++ b/src/components/navbar/navBar.scss
@@ -39,4 +39,17 @@ li:hover{
         color: rgb(33, 224, 192);
         cursor: pointer;
     }
+    
+}
+@media only screen and (max-width: 425px){
+    .nav-bar{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: column;
+    width: 90%;
+    height: 4rem;
+    padding-top: 1rem;
+    }
+    
 }
