--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -23,4 +23,18 @@
   font-weight: bold;
   font-size: xx-large;
   padding: 1.3rem;
+}
+
+@media only screen and (max-width: 425px) {
+  .project {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+  }
+  .project__listado {
+    display: flex;
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=project.css.map */
