--- a/src/components/projects/project.scss
+++ b/src/components/projects/project.scss
@@ -24,4 +24,21 @@
         padding: 1.3rem;
         
          }
+
+        
+}
+@media only screen and (max-width: 425px){
+    .project{
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        
+        &__listado{
+            display: flex;
+            flex-direction: column;
+        }
+    }
+   
 }
