--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -1,40 +1,1 @@
-.project {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  padding-top: 2rem;
-}
-.project h1 {
-  font-weight: bold;
-  font-size: xx-large;
-  font-family: "Inconsolata", monospace;
-}
-.project.aligment {
-  width: 55%;
-  font-size: large;
-}
-.project__listado {
-  display: flex;
-  flex-direction: row;
-}
-.project h1 {
-  font-weight: bold;
-  font-size: xx-large;
-  padding: 1.3rem;
-}
-
-@media only screen and (max-width: 425px) {
-  .project {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-  }
-  .project__listado {
-    display: flex;
-    flex-direction: column;
-  }
-}/*# sourceMappingURL=project.css.map */
+.project{display:flex;justify-content:center;align-items:center;flex-direction:column;text-align:center;padding-top:2rem}.project h1{font-weight:bold;font-size:xx-large;font-family:"Inconsolata",monospace}.project.aligment{width:55%;font-size:large}.project__listado{display:flex;flex-direction:row}.project h1{font-weight:bold;font-size:xx-large;padding:1.3rem}@media only screen and (max-width: 425px){.project{display:flex;justify-content:center;align-items:center;flex-direction:column;text-align:center}.project__listado{display:flex;flex-direction:column}}/*# sourceMappingURL=project.css.map */
