--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,1 @@
-.App {
-  background-color: rgb(26, 26, 46);
-  width: 100%;
-  height: 100%;
-  color: white;
-}
-.App h1 {
-  font-family: "Inconsolata", monospace;
-}
-
-@media only screen and (max-width: 425px) {
-  .App {
-    width: 100%;
-    background-color: rgb(26, 26, 46);
-  }
-}/*# sourceMappingURL=App.css.map */
+.App{background-color:#58860d;width:100%;height:100%;color:#fff}.App h1{font-family:"Inconsolata",monospace}@media only screen and (max-width: 425px){.App{width:100%;background-color:#1a1a2e}}/*# sourceMappingURL=App.css.map */
