--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,10 @@
 .App{
-    background-color: rgb(26, 26, 46);
-    width: 100%;
-    height: 100%;
-    color: white;
-    h1{
-        font-family: 'Inconsolata', monospace;
+    background-color:rgb(26,26,46);
+    width:100%;height:100%;
+    color:white;
+    h1{font-family:'Inconsolata',monospace}
     }
-    
-}
-
-@media only screen and (max-width: 425px){
-    .App{
-    
-    width: 100%;
-    background-color: rgb(26, 26, 46);
+    @media only screen and (max-width:425px){
+        .App
+        {width:100%;background-color:rgb(26, 26, 46)}
     }
-    
-}
