--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -103,13 +103,8 @@
         padding-right: 1rem;
     }
     &__content{
-       display: flex;
-       justify-content: center;
-       align-items: center;
-       flex-direction: column;
-       padding-right: 3rem;
-       margin-right: 7rem;
-       width: 100%;
+       display: none;
+      
     }
     &__right{
         width: 100%;
