--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -72,19 +72,18 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
-    font-size: small;
+    font-size: large;
 
     &__left{
 
         padding: 2rem;
         width: 100%;
-        padding-top: 5rem;
         text-align: center;
         margin-right: 2.5rem;
+        margin-bottom: 0;
+        padding-bottom: 0;
         &.aligment{
             margin-left:0.7rem;
-           
-            
         }
     }
     &__right{
@@ -95,8 +94,8 @@
         display: flex;
         justify-content: center;
         align-items:center;
-        padding-top:3rem;
-        padding-left: 5em;
+        padding-top: 0;
+        padding-left: 5rem;
     } 
     }
     
