--- a/src/App-min.scss
+++ b/src/App-min.scss
@@ -1,1 +1,1 @@
-.App{background-color:rgb(26,26,46);width:100%;height:100%;color:white;h1{font-family:'Inconsolata',monospace}}@media only screen and (max-width:425px){.App{width:100%;background-color:rgb(26,26,46)}}
+.App{background-color:rgb(26,26,46);width:100%;height:100%;color:white;h1{font-family:'Inconsolata',monospace}}@media only screen and (max-width:425px){.App{width:100%;background-color:rgb(26,26,46)}}@media only screen and (max-width:1672px){.App{width:100%;overflow-x:hidden;background-color:rgb(26,26,46)}}
