--- a/src/App.scss
+++ b/src/App.scss
@@ -8,3 +8,7 @@
         .App
         {width: 100%;background-color:rgb(26, 26, 46)}
     }
+    @media only screen and (max-width:1672px){
+        .App
+        {width: 100%;overflow-x: hidden; background-color:rgb(26, 26, 46)}
+    }
