--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,23 @@
-.App{background-color:#1a1a2e;width:100%;height:100%;color:#fff}.App h1{font-family:"Inconsolata",monospace}@media only screen and (max-width: 425px){.App{width:100%;background-color:#1a1a2e}}@media only screen and (max-width: 1672px){.App{width:100%;overflow-x:hidden;background-color:#1a1a2e}}/*# sourceMappingURL=App.css.map */
+.App {
+  background-color: rgb(26, 26, 46);
+  width: 100%;
+  height: 100%;
+  color: white;
+}
+.App h1 {
+  font-family: "Inconsolata", monospace;
+}
+
+@media only screen and (max-width: 425px) {
+  .App {
+    width: 100%;
+    background-color: rgb(26, 26, 46);
+  }
+}
+@media only screen and (max-width: 1672px) {
+  .App {
+    width: 100%;
+    overflow-x: hidden;
+    background-color: rgb(26, 26, 46);
+  }
+}/*# sourceMappingURL=App.css.map */
