--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,1 +1,23 @@
-.footer{display:flex;justify-content:center;align-items:center;padding:1rem;margin:1rem;background-color:#1a1a2e;margin-bottom:0}.footer h2{font-weight:bold;font-family:"Inconsolata",monospace}@media only screen and (max-width: 425px){.footer{display:flex;justify-content:center;padding:0rem;margin:0rem;padding-bottom:2rem}}/*# sourceMappingURL=footer.css.map */
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  margin: 1rem;
+  background-color: rgb(26, 26, 46);
+  margin-bottom: 0;
+}
+.footer h2 {
+  font-weight: bold;
+  font-family: "Inconsolata", monospace;
+}
+
+@media only screen and (max-width: 425px) {
+  .footer {
+    display: flex;
+    justify-content: center;
+    padding: 0rem;
+    margin: 0rem;
+    padding-bottom: 2rem;
+  }
+}/*# sourceMappingURL=footer.css.map */
