--- a/src/components/navbar/navBar.css
+++ b/src/components/navbar/navBar.css
@@ -1,1 +1,52 @@
-li:hover{text-shadow:0 0 5px #21e0c0,0 0 15px #21e0c0}.nav-bar{display:flex;justify-content:space-between;align-items:baseline;flex-direction:row;overflow:hidden;position:fixed;background-color:#1a1a2e;z-index:1;height:3rem;font-family:"Inconsolata",monospace;width:100%}.nav-bar__left{display:flex;flex-direction:row;gap:2rem;margin-left:2rem}.nav-bar__right{margin:.1rem}.nav-bar__icon{display:flex;justify-content:flex-start;align-items:center;flex-direction:column}.nav-bar__icon i:hover{text-shadow:0 0 5px #21e0c0,0 0 10px #21e0c0}.nav-bar__icon-body{font-size:1.2rem;color:#21e0c0;cursor:pointer}@media only screen and (max-width: 425px){.nav-bar{display:flex;justify-content:center;align-items:center;flex-direction:column;width:90%;height:5rem;padding-top:1rem}}/*# sourceMappingURL=navBar.css.map */
+li:hover {
+  text-shadow: 0 0 5px rgb(33, 224, 192), 0 0 15px rgb(33, 224, 192);
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  flex-direction: row;
+  overflow: hidden;
+  position: fixed;
+  background-color: rgb(26, 26, 46);
+  z-index: 1;
+  height: 3rem;
+  font-family: "Inconsolata", monospace;
+  width: 100%;
+}
+.nav-bar__left {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  margin-left: 2rem;
+}
+.nav-bar__right {
+  margin: 0.1rem;
+}
+.nav-bar__icon {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+.nav-bar__icon i:hover {
+  text-shadow: 0 0 5px rgb(33, 224, 192), 0 0 10px rgb(33, 224, 192);
+}
+.nav-bar__icon-body {
+  font-size: 1.2rem;
+  color: rgb(33, 224, 192);
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 425px) {
+  .nav-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 90%;
+    height: 5rem;
+    padding-top: 1rem;
+  }
+}/*# sourceMappingURL=navBar.css.map */
